--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="col col-sm-9">
         <h1>Products</h1>
-        <div class="row">
+        <div class="row" id="divs">
           <div class="col col-xs-12 col-md-6 col-lg-4">
             <div>
               <img src="http://lorempixel.com/250/250/">
@@ -147,7 +147,7 @@
       </div>
       <div class="col col-sm-3">
         <h1>Shopping Cart</h1>
-        <div class="cart">
+        <div id="cart">
         </div>
       </div>
     </div>
